Fix comment typo in .env file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-//Chnage these with yours
+//change these with your keys
 VITE_FIREBASE_API_KEY="AIzaSy..."
 VITE_FIREBASE_AUTH_DOMAIN="your-project.firebaseapp.com"
 VITE_FIREBASE_PROJECT_ID="your-project-id"
